<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/head">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="@android:color/white"

          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/four_yijian"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>


      </LinearLayout>

      <ImageView
          android:id="@+id/yijian_back"
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_gravity="center_vertical"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:src="@drawable/ic_back_normal"/>
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/frame"
        android:scaleType="fitXY"
        android:src="@drawable/hei"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        app:cardCornerRadius="10dp">

      <EditText
          android:id="@+id/et_yijian"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/activity_horizontal_margin"
          android:background="@null"
          android:hint="@string/four_yijian_hint"
          android:textSize="15sp"/>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        app:cardCornerRadius="10dp">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:background="@null"
          android:hint="@string/four_yijian_hint1"
          android:textSize="15sp"/>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="16dp"
          android:scaleType="fitXY"
          android:src="@drawable/hei"/>

      <TextView
          android:layout_width="35dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="6dp"
          android:background="@color/head"
          android:gravity="center_horizontal"
          android:text="或"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/four_yijian_kefu"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-13dp"
        android:gravity="center_horizontal"
        android:text="@string/four_yijian_qq"/>
  </LinearLayout>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:background="@drawable/button_style_green"
      android:onClick="onClick"
      android:text="@string/four_tijiao"
      android:textColor="@android:color/white"
      android:textSize="18sp"/>
</RelativeLayout>