<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/head">

  <FrameLayout
      android:id="@+id/frame"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/four_shezhi"
          android:layout_gravity="center"
          android:textSize="18sp"
          android:gravity="center"
          android:textColor="@android:color/black"
          />

    </LinearLayout>
    <ImageView
        android:id="@+id/shezhireturn"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_back_normal"
        android:padding="5dp"
        android:onClick="onClick"/>
  </FrameLayout>
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:src="@drawable/hei"
      android:scaleType="fitXY"
      android:layout_below="@id/frame"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_below="@id/frame">

    <LinearLayout
        android:id="@+id/shezhi_zhanghao"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@android:color/white">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/four_shezhi_zhanghao"
          android:gravity="center_vertical"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_weight="1"
          android:textSize="16sp"/>
      <ImageView
          android:layout_width="12dp"
          android:layout_height="12dp"
          android:src="@drawable/point_right"
          android:layout_gravity="center"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shezhi_qingchu"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/four_shezhi_qingchu"
          android:gravity="center_vertical"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_weight="1"
          android:textSize="16sp"/>
      <ImageView
          android:layout_width="12dp"
          android:layout_height="12dp"
          android:src="@drawable/point_right"
          android:layout_gravity="center"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shezhi_kefu"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/four_shezhi_kefu"
          android:gravity="center_vertical"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_weight="1"
          android:textSize="16sp"/>
      <ImageView
          android:layout_width="12dp"
          android:layout_height="12dp"
          android:src="@drawable/point_right"
          android:layout_gravity="center"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shezhi_guanyu"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/four_shezhi_guanyu"
          android:gravity="center_vertical"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_weight="1"
          android:textSize="16sp"/>
      <ImageView
          android:layout_width="12dp"
          android:layout_height="12dp"
          android:src="@drawable/point_right"
          android:layout_gravity="center"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shezhi_exit"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >

      <Button
          android:layout_marginTop="8dp"
          android:id="@+id/btn_zhuxiao_exit"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:text="@string/four_shezhi_exit"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:textSize="16sp"
          android:layout_marginRight="5dp"
          android:layout_marginLeft="5dp"
          android:background="@drawable/btn_demglu"
          />

    </LinearLayout>
  </LinearLayout>
</RelativeLayout>
